test/scc/expr/semantic-errors/157.a
157.t:3:24: error: too many initializer values